update endpoint testing
