# app/Http/Controllers/Organization/OrganizationController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Organization;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\UpdateOrganizationRequest;
 use App\Http\Resources\OrganizationIndexResource;
 use App\Http\Resources\OrganizationResource;
 use App\Models\Organization;
@@ -99,6 +100,52 @@ class OrganizationController extends Controller
         return (OrganizationIndexResource::collection($organizations)
             ->response()
             ->setStatusCode(200));
+    }
+
+    // update organizations
+    #[OA\Patch(
+        path: '/admin/org/{organization}',
+        tags: ['Organization'],
+        security: [['sanctum' => []]],
+        parameters: [
+            new OA\Parameter(
+                name: 'organization',
+                in: 'path',
+                required: true,
+                schema: new OA\Schema(type: 'string', format: 'uuid')
+            ),
+        ],
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(property: 'name', type: 'string', example: 'Acme Inc.'),
+                    new OA\Property(property: 'shortDescription', type: 'string'),
+                    new OA\Property(property: 'description', type: 'string', nullable: true),
+                    new OA\Property(property: 'noOfUsers', type: 'integer'),
+                    new OA\Property(property: 'noOfAdmins', type: 'integer'),
+                ],
+            )
+        ),
+        responses: [
+            new OA\Response(response: 200, description: 'Organization updated'),
+            new OA\Response(response: 401, description: 'Unauthenticated'),
+            new OA\Response(response: 403, description: 'Not allowed'),
+            new OA\Response(response: 404, description: 'Organization not found'),
+            new OA\Response(response: 409, description: 'Organization name already exists'),
+            new OA\Response(response: 422, description: 'Validation error'),
+        ]
+    )]
+    public function updateOrganization(UpdateOrganizationRequest $request, Organization $organization): JsonResponse
+    {
+        // validate request
+        $updateOrg = $request->toDto();
+        // model the incoming data to schema &  update
+        $organization->update($updateOrg->toModelAttributes());
+        // return success
+        return (new OrganizationResource($organization))
+            ->response()
+            ->setStatusCode(200);
     }
 }
 
