# routes/api.php
@@ -23,6 +23,7 @@ Route::prefix('admin')->group(function () {
         Route::prefix('org')->group(function () {
             Route::post('/create', [OrganizationController::class, 'createOrganization']);
             Route::get('/all', [OrganizationController::class, 'getAllOrganizations']);
+            Route::patch('/{organization}', [OrganizationController::class, 'updateOrganization']);
         });
     });
 });
