# storage/api-docs/api-docs.json
@@ -188,6 +188,79 @@
                 ]
             }
         },
+        "/admin/org/{organization}": {
+            "patch": {
+                "tags": [
+                    "Organization"
+                ],
+                "operationId": "2ed1caa9160f2b75bffe5862c9e5d225",
+                "parameters": [
+                    {
+                        "name": "organization",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Acme Inc."
+                                    },
+                                    "shortDescription": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "nullable": true
+                                    },
+                                    "noOfUsers": {
+                                        "type": "integer"
+                                    },
+                                    "noOfAdmins": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Organization updated"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Not allowed"
+                    },
+                    "404": {
+                        "description": "Organization not found"
+                    },
+                    "409": {
+                        "description": "Organization name already exists"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/test": {
             "get": {
                 "tags": [
